tiny fix on small padding btn variables

--- a/assets/sass/_theme/_variables.sass
+++ b/assets/sass/_theme/_variables.sass
@@ -145,6 +145,7 @@
     --btn-min-width: #{$btn-min-width-desktop}
     --btn-large-font-size: #{$btn-large-font-size-desktop}
     --btn-large-padding: #{$btn-large-padding-desktop}
+    --btn-small-padding: #{$btn-small-padding-desktop}
 
   // -------------- //
   //      GRID      //
